--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,21 @@
 <html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Orinoco - World of Teddies</title>
 
 <body>
     <p class="hello">Hello World of teddies</p>
+
+
+
+
 </body>
 
-<script src="js/index.js"></script>
+<script src="js/index.js">async</script>
 
 </html>
