--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orinoco - World of Teddies</title>
+</head>
 
 <body>
-    <p class="hello">Hello World of teddies</p>
+
+    <header>
+        <nav></nav>
+    </header>
+    <main>
+        <p class="hello">Hello World of teddies</p>
+
+    </main>
 
 
 
+    <footer></footer>
 
 </body>
 
