--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
     <title>Orinoco - World of Teddies</title>
 </head>
 
 <body>
 
     <header>
-        <?xml version="1.0" standalone="no"?><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <?xml version="1.0" standalone="no"?><svg class="topsvg" xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 1440 200">
             <path fill="#a2d9ff" fill-opacity="1"
                 d="M0,192L80,165.3C160,139,320,85,480,85.3C640,85,800,139,960,149.3C1120,160,1280,128,1360,112L1440,96L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
             </path>
