--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,6 @@
 <body>
 
     <header>
-        <?xml version="1.0" standalone="no"?><svg class="wave" xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 1440 200">
-            <path fill="#fe9cd6" fill-opacity="1"
-                d="M0,192L80,165.3C160,139,320,85,480,85.3C640,85,800,139,960,149.3C1120,160,1280,128,1360,112L1440,96L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
-            </path>
-        </svg>
-
         <nav class="navbar navbar-expand-md">
 
 
@@ -56,10 +49,11 @@
     <main>
         <p class="hello">Hello World of teddies</p>
         <section>
-
+            <div id="myData"></div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+    </footer>
 </body>
 
 
