Put menu on top

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,6 @@
 
     <header>
         <nav class="navbar navbar-expand-md">
-
-
             <a class="navbar-brand" href="/images/teddy-mad.png"><img class="logo" src="/images/teddy-mad.png"
                     alt=""></a>
             <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse"
@@ -45,10 +43,13 @@
             </div>
         </nav>
 
+        <div class="jumbotron text-center">
+            <h1 class="hello">Hello World of teddies</h1>
+        </div>
 
     </header>
     <main>
-        <p class="hello">Hello World of teddies</p>
+        <h1 class="hello">Hello World of teddies</h1>
         <section>
             <div id="myData"></div>
         </section>
