--- a/public/index.html
+++ b/public/index.html
@@ -51,38 +51,7 @@
     <main>
         <h1 class="hello">Hello World of teddies</h1>
         <section>
-            <div class="row">
-                <div class="col-md-3" id="myData"></div>
-                <figure class="card card-product">
-                    <div class="img-wrap"></div>
-                </figure>
-                <div class="action-wrap">
-                    <a href="#" class="btn btn-primary btn-sm float-right"> Order </a>
-                    <div class="price-wrap h5">
-                        <span class="price">$1280</span>
-                    </div>
-                </div>
-                <!--stop-->
-                <div class="row">
-                    <div class="col-md-4">
-                        <figure class="card card-product">
-                            <div class="img-wrap">
-                                <img src="https://s9.postimg.org/tupxkvfj3/image.jpg">
-                                <a class="btn-overlay" href="#"><i class="fa fa-search-plus"></i> Quick view</a>
-                            </div>
-                            <figcaption class="info-wrap">
-                                <h6 class="title text-dots"><a href="#">Good item name</a></h6>
-                                <div class="action-wrap">
-                                    <a href="#" class="btn btn-primary btn-sm float-right"> Order </a>
-                                    <div class="price-wrap h5">
-                                        <span class="price-new">$1280</span>
-                                        <del class="price-old">$1980</del>
-                                    </div> <!-- price-wrap.// -->
-                                </div> <!-- action-wrap -->
-                            </figcaption>
-                        </figure> <!-- card // -->
-                    </div> <!-- col // -->
-
+            <div class="row" id="myData"></div>
 
 
 
