Add select menu in html page product

--- a/public/product.html
+++ b/public/product.html
@@ -51,8 +51,17 @@
     <main>
         <h1 class="hello">Hello World of teddies</h1>
         <section>
-            <div class="row" id="myData"></div>
+            <div class="row" id="myData">
 
+                <h3>Select your color</h3>
+                <select id="selectColor" class="browser-default custom-select custom-select-lg mb-3">
+                    <option default>Choose your color</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+
+            </div>
 
 
         </section>
