--- a/public/product.html
+++ b/public/product.html
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="main-navigation">
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Home</a>
+                        <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Shopping cart</a>
