--- a/public/product.html
+++ b/public/product.html
@@ -51,10 +51,19 @@
     <main>
         <h1 class="hello">Hello World of teddies</h1>
         <section>
-            <div class="row justify-content-center" id="myData">
+            <div class="row justify-content-center" id="myData"></div>
+            <div class="row justify-content-center">
+                <div class="d-flex flex-wrap">
+                    <div class="select-outline position-relative w-100">
+                        <select class="mdb-select md-form md-outline" id="mySelect">
+                            <option value="" disabled selected>Color</option>
+                            <!--options go here from product.js-->
+                        </select>
+                        <label>Color</label>
+                    </div>
+                </div>
 
             </div>
-
 
         </section>
     </main>
@@ -77,5 +86,6 @@
 
 <!--my scripts bellow-->
 <script src="js/product.js">async</script>
+
 
 </html>
