--- a/public/product.html
+++ b/public/product.html
@@ -42,28 +42,12 @@
                 </ul>
             </div>
         </nav>
-
-        <div class="jumbotron text-center">
-            <h1 class="hello">Hello World of teddies</h1>
-        </div>
-
+        <!--Jumbotron here-->
     </header>
     <main>
         <h1 class="hello">Hello World of teddies</h1>
         <section>
             <div class="row justify-content-center" id="myData"></div>
-            <div class="row justify-content-center">
-                <div class="d-flex flex-wrap">
-                    <div class="select-outline position-relative w-100">
-                        <select class="mdb-select md-form md-outline" id="mySelect">
-                            <option value="" disabled selected>Color</option>
-                            <!--options go here from product.js-->
-                        </select>
-                        <label>Color</label>
-                    </div>
-                </div>
-
-            </div>
 
         </section>
     </main>
@@ -86,6 +70,5 @@
 
 <!--my scripts bellow-->
 <script src="js/product.js">async</script>
-
 
 </html>
