--- a/public/product.html
+++ b/public/product.html
@@ -47,8 +47,60 @@
     <main>
         <h1 class="hello">Hello World of teddies</h1>
         <section>
-            <div class="row justify-content-center" id="myData"></div>
+            <form action="" method="get">
+                <div class="row justify-content-center" id="myData">
 
+
+
+                    <div class="col-md-8 justify-content-center">
+                        <figure class="card card-product">
+                            <div class="img-wrap">
+                                <!--fill from product.js-->
+                            </div>
+                            <figcaption class="info-wrap">
+                                <h4 class="title">
+                                    <!--fill from product.js-->
+                                </h4>
+                                <p class="desc">
+                                    <!--fill from product.js-->
+                                </p>
+                            </figcaption>
+                            <div class="bottom-wrap">
+                                <div class="row justify-content-center">
+                                    <div class="d-flex flex-wrap">
+                                        <div class="select-outline position-relative w-100"><select
+                                                class="mdb-select md-form md-outline" id="mySelect"
+                                                form="addToCartForm">
+                                                <option value="" disabled="" selected="">Choose a color...</option>
+                                                <!--options fill from product.js-->
+                                            </select><label>Color</label></div>
+                                    </div>
+                                </div><a class="btn btn-sm btn-primary float-right"
+                                    href="http://localhost:3000/teddy.html?id=5be9c8541c9d440000665243">Add to Cart</a>
+                                <h5 class="price">
+                                    <!--fill from product.js-->
+                                </h5>
+                            </div>
+                        </figure>
+                    </div>
+
+
+
+
+
+                    <div class="form-group">
+                        <label for="exampleFormControlSelect1">Select quantity</label>
+                        <select class="form-control" id="exampleFormControlSelect1">
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
+                            <option>5</option>
+                        </select>
+                    </div>
+                </div>
+
+            </form>
         </section>
     </main>
     <!-- Footer -->
