Update Select colors

--- a/public/product.html
+++ b/public/product.html
@@ -48,13 +48,10 @@
         <h1 class="hello">Hello World of teddies</h1>
         <section>
             <form action="" method="get">
-                <div class="row justify-content-center" id="myData">
-
-
-
-                    <div class="col-md-8 justify-content-center">
+                <div class="row justify-content-center">
+                    <div class="col-md-8 justify-content-center" id="myData">
                         <figure class="card card-product">
-                            <div class="img-wrap">
+                            <div class="img-wrap" id="img-wrap">
                                 <!--fill from product.js-->
                             </div>
                             <figcaption class="info-wrap">
