--- a/public/product.html
+++ b/public/product.html
@@ -54,8 +54,8 @@
                             <div class="img-wrap" id="img-wrap">
                                 <!--fill from product.js-->
                             </div>
-                            <figcaption class="info-wrap">
-                                <h4 class="title">
+                            <figcaption id="info-wrap">
+                                <h4 class="title" id="teddyName">
                                     <!--fill from product.js-->
                                 </h4>
                                 <p class="desc">
