--- a/public/product.html
+++ b/public/product.html
@@ -58,21 +58,33 @@
                                 <h4 class="title" id="teddyName">
                                     <!--fill from product.js-->
                                 </h4>
-                                <p class="desc">
+                                <p class="desc" id="teddyDescription">
                                     <!--fill from product.js-->
                                 </p>
                             </figcaption>
                             <div class="bottom-wrap">
                                 <div class="row justify-content-center">
                                     <div class="d-flex flex-wrap">
-                                        <div class="select-outline position-relative w-100"><select
-                                                class="mdb-select md-form md-outline" id="mySelect"
+                                        <div class="select-outline position-relative w-100">
+                                            <select class="mdb-select md-form md-outline" id="mySelect"
                                                 form="addToCartForm">
                                                 <option value="" disabled="" selected="">Choose a color...</option>
                                                 <!--options fill from product.js-->
-                                            </select><label>Color</label></div>
+                                            </select><label>Color</label>
+                                        </div>
                                     </div>
-                                </div><a class="btn btn-sm btn-primary float-right"
+                                    <div class="form-group">
+                                        <label form="exampleFormControlSelect1">Select quantity</label>
+                                        <select class="form-control" id="exampleFormControlSelect1">
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <a class="btn btn-sm btn-primary float-right"
                                     href="http://localhost:3000/teddy.html?id=5be9c8541c9d440000665243">Add to Cart</a>
                                 <h5 class="price">
                                     <!--fill from product.js-->
@@ -85,16 +97,7 @@
 
 
 
-                    <div class="form-group">
-                        <label for="exampleFormControlSelect1">Select quantity</label>
-                        <select class="form-control" id="exampleFormControlSelect1">
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
-                            <option>5</option>
-                        </select>
-                    </div>
+
                 </div>
 
             </form>
