Add product to local storage

--- a/public/cart.html
+++ b/public/cart.html
@@ -28,10 +28,10 @@
             <div class="collapse navbar-collapse" id="main-navigation">
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link text-uppercase font-weight-bold active" href="index.html">Home</a>
+                        <a class="nav-link text-uppercase font-weight-bold" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-uppercase font-weight-bold" href="cart.html">Shopping cart</a>
+                        <a class="nav-link text-uppercase font-weight-bold active" href="cart.html">Shopping cart</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-uppercase font-weight-bold" href="#">About</a>
@@ -66,7 +66,7 @@
                                 <div class="row justify-content-center">
                                     <div class="d-flex flex-wrap">
                                         <label form="addToCartForm">Select color</label>
-                                        <select class="form-control" id="myColor" form="addToCartForm">
+                                        <select class="form-control" id="mySelect" form="addToCartForm">
                                             <option value="" disabled="" selected="">Choose a color...</option>
                                             <!--options fill from product.js-->
                                         </select>
