--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
             <div class="collapse navbar-collapse" id="main-navigation">
                 <ul class="nav nav-pills nav-fill">
                     <li class="nav-item">
-                        <a class="nav-link text-uppercase font-weight-bold active" href="#">Home</a>
+                        <a class="nav-link text-uppercase font-weight-bold active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-uppercase font-weight-bold" href="#">My Cart</a>
+                        <a class="nav-link text-uppercase font-weight-bold" href="cart.html">My Cart</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-uppercase font-weight-bold" href="#">About</a>
