--- a/public/product.html
+++ b/public/product.html
@@ -47,7 +47,7 @@
     <main>
         <h1 class="hello">Hello World of teddies</h1>
         <section>
-            <form action="" method="POST">
+            <form action="/order" method="POST">
                 <div class="row justify-content-center">
                     <div class="col-md-8 justify-content-center" id="myData">
                         <figure class="card card-product">
