Start style line items in cart

--- a/public/cart.html
+++ b/public/cart.html
@@ -41,18 +41,47 @@
     <main>
         <h1 class="hello">Hello World of teddies</h1>
         <section>
-            <div class="row" id="myData">
-                <div class="container-sm title">
-                    <h2>Shopping Cart</h2>
+            <div class="container">
+                <div class="row" id="myData">
+                    <div class="container-sm title">
+                        <h2>Shopping Cart</h2>
+                    </div>
+
+                    <div id="cart">
+
+                        <div class="container-fluid productList">
+                            <div class="row product" id="item1">
+                                <div class="col">
+                                    <div class="img-wrap imageContainer">
+                                        <img src="http://localhost:3000/images/teddy_4.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-sm productInformationContainer">
+                                    <div class="row productDescription">
+                                        <h2 class="productName">Gustav</h2>
+                                    </div>
+                                    <p class="productDescription">
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa perspiciatis
+                                        mollitia
+                                        sunt cum porro numquam. Architecto possimus sint quos nemo maxime doloribus
+                                        consectetur quidem aut, unde maiores quasi explicabo voluptatum!
+                                    </p>
+                                </div>
+                                <div class="row productControls">
+                                    <div class="productQuantity"></div>
+                                    <div class="productRemove"></div>
+                                </div>
+                                <div class="col-xs productPrice"></div>
+                            </div>
+                        </div>
+
+                    </div>
+
+
                 </div>
 
-                <div class="cart"></div>
-
-
             </div>
-
             </div>
-
         </section>
     </main>
 
