Start build cart

--- a/public/cart.html
+++ b/public/cart.html
@@ -49,9 +49,9 @@
 
                     <div id="cart">
 
-                        <div class="container-fluid productList">
+                        <div class="container-fluid" id="productList">
                             <div class="row product" id="item1">
-                                <div class="col">
+                                <div class="col-xs">
                                     <div class="img-wrap imageContainer">
                                         <img src="http://localhost:3000/images/teddy_4.jpg" alt="">
                                     </div>
@@ -59,19 +59,26 @@
                                 <div class="col-sm productInformationContainer">
                                     <div class="row productDescription">
                                         <h2 class="productName">Gustav</h2>
+
+                                        <p class="productDescription">
+                                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa perspiciatis
+                                            mollitia
+                                            sunt cum porro numquam. Architecto possimus sint quos nemo maxime doloribus
+                                            consectetur quidem aut, unde maiores quasi explicabo voluptatum!
+                                        </p>
                                     </div>
-                                    <p class="productDescription">
-                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa perspiciatis
-                                        mollitia
-                                        sunt cum porro numquam. Architecto possimus sint quos nemo maxime doloribus
-                                        consectetur quidem aut, unde maiores quasi explicabo voluptatum!
-                                    </p>
+                                    <div class="row productControls">
+                                        <div class="productQuantity">
+                                            <p>Add/remove</p>
+                                        </div>
+                                        <div class="productRemove">
+                                            <p>Remove Item from cart</p>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="row productControls">
-                                    <div class="productQuantity"></div>
-                                    <div class="productRemove"></div>
+                                <div class="col-xs productPrice">
+                                    <p>100.00 EUR</p>
                                 </div>
-                                <div class="col-xs productPrice"></div>
                             </div>
                         </div>
 
