--- a/public/cart.html
+++ b/public/cart.html
@@ -50,7 +50,7 @@
                     <div class="container-fluid" id="cart">
 
                         <div class="col" id="productList">
-
+                            <p class="empty-cart">Oups! Il semble que votre panier soit vide...</p>
                         </div>
 
                     </div>
