--- a/public/cart.html
+++ b/public/cart.html
@@ -57,135 +57,77 @@
                         </div>
 
                     </div>
-                    <!-- Card -->
                     <div class="container" id="checkout-form">
-                        <div class="pt-4 pb-3">
-
-                            <!-- Grid row -->
-                            <div class="row">
-
-                                <!-- Grid column -->
-                                <div class="col-lg-6 mb-5 mb-lg-0">
-
-                                    <h5 class="mb-4 pb-1">Billing details</h5>
-
-                                    <!-- Grid row -->
-                                    <div class="row">
-
-                                        <!-- Grid column -->
-                                        <div class="col-lg-6">
-
-                                            <!-- First name -->
-                                            <div class="md-form md-outline mt-0">
-                                                <input type="text" id="form11" class="form-control">
-                                                <label for="form11">First name</label>
-                                            </div>
-
-                                        </div>
-                                        <!-- Grid column -->
-
-                                        <!-- Grid column -->
-                                        <div class="col-lg-6">
-
-                                            <!-- Last name -->
-                                            <div class="md-form md-outline mt-0">
-                                                <input type="text" id="form12" class="form-control">
-                                                <label for="form12">Last name</label>
-                                            </div>
-
-                                        </div>
-                                        <!-- Grid column -->
-
-                                    </div>
-                                    <!-- Grid row -->
-
-                                    <!-- Company name -->
-                                    <div class="md-form md-outline my-0">
-                                        <input type="text" id="form13" class="form-control mb-0">
-                                        <label for="form13">Company name (optional)</label>
-                                    </div>
-
-                                    <!-- Country -->
-                                    <div class="d-flex flex-wrap">
-                                        <div class="select-outline position-relative w-100">
-                                            <select class="mdb-select md-form md-outline">
-                                                <option value="" disabled selected>Choose your option</option>
-                                                <option value="1">Option 1</option>
-                                                <option value="2">Option 2</option>
-                                                <option value="3">Option 3</option>
-                                            </select>
-                                            <label>Example label</label>
-                                        </div>
-                                    </div>
-
-                                    <!-- Address Part 1 -->
-                                    <div class="md-form md-outline mt-0">
-                                        <input type="text" id="form14" placeholder="House number and street name"
-                                            class="form-control">
-                                        <label for="form14">Address</label>
-                                    </div>
-
-                                    <!-- Address Part 2 -->
-                                    <div class="md-form md-outline mt-0">
-                                        <input type="text" id="form15"
-                                            placeholder="Apartment, suite, unit etc. (optional)" class="form-control">
-                                        <label for="form15">Address</label>
-                                    </div>
-
-                                    <!-- Postcode / ZIP -->
-                                    <div class="md-form md-outline mt-0">
-                                        <input type="text" id="form16" class="form-control">
-                                        <label for="form16">Postcode / ZIP</label>
-                                    </div>
-
-                                    <!-- Town / City -->
-                                    <div class="md-form md-outline mt-0">
-                                        <input type="text" id="form17" class="form-control">
-                                        <label for="form17">Town / City</label>
-                                    </div>
-
-                                    <!-- Phone -->
-                                    <div class="md-form md-outline mt-0">
-                                        <input type="number" id="form18" class="form-control">
-                                        <label for="form18">Phone</label>
-                                    </div>
-
-                                    <!-- Email address -->
-                                    <div class="md-form md-outline mt-0">
-                                        <input type="email" id="form19" class="form-control">
-                                        <label for="form19">Email address</label>
-                                    </div>
-
-                                    <div class="form-check pl-0 mb-4 mb-lg-0">
-                                        <input type="checkbox" class="form-check-input filled-in" id="new3">
-                                        <label class="form-check-label small text-uppercase card-link-secondary"
-                                            for="new3">Create an account?</label>
-                                    </div>
-
-                                </div>
-                                <!-- Grid column -->
-
-                                <!-- Grid column -->
-                                <div class="col-lg-6">
-
-                                    <h5 class="mb-4 pb-1">Additional information</h5>
-
-                                    <!-- Additional information -->
+                        <form class="needs-validation" novalidate>
+                            <div class="form-row">
+                                <div class="col-md-4">
                                     <div class="md-form md-outline">
-                                        <textarea id="form76" class="md-textarea form-control" rows="4"></textarea>
-                                        <label for="form76">Additional information</label>
+                                        <input type="text" class="form-control" id="validationCustom01"
+                                            placeholder="First name" required>
+                                        <label for="validationCustom01">First name</label>
+                                        <div class="valid-feedback">
+                                            Looks good!
+                                        </div>
                                     </div>
-
                                 </div>
-                                <!-- Grid column -->
-
+                                <div class="col-md-4">
+                                    <div class="md-form md-outline">
+                                        <input type="text" class="form-control" id="validationCustom02"
+                                            placeholder="Last name" required>
+                                        <label for="validationCustom02">Last name</label>
+                                        <div class="valid-feedback">
+                                            Looks good!
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="md-form md-outline input-group">
+                                        <input type="text" class="form-control" id="validationCustomUsername"
+                                            placeholder="Email" aria-describedby="inputGroupPrepend" required>
+                                        <div class="invalid-feedback">
+                                            Please enter a valid Email adress.
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <!-- Grid row -->
+                            <div class="form-row">
+                                <div class="col-md-6">
+                                    <div class="md-form md-outline">
+                                        <input type="text" class="form-control" id="validationCustom03"
+                                            placeholder="Street Nr." required>
+                                        <label for="validationCustom03">Street Nr.</label>
+                                        <div class="invalid-feedback">
+                                            Please provide a valid city.
+                                        </div>
+                                    </div>
+                                </div>
 
-                        </div>
+                                <div class="col-md-3">
+                                    <div class="md-form md-outline">
+                                        <input type="text" class="form-control" id="validationCustom04"
+                                            placeholder="City" required>
+                                        <label for="validationCustom03">City</label>
+                                        <div class="invalid-feedback">
+                                            Please provide a valid city.
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-3">
+                                    <div class="md-form md-outline">
+                                        <input type="text" class="form-control" id="validationCustom05"
+                                            placeholder="Zip" required>
+                                        <label for="validationCustom05">Zip</label>
+                                        <div class="invalid-feedback">
+                                            Please provide a valid zip.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <button class="btn btn-primary btn-sm" type="submit">Checkout</button>
+                        </form>
                     </div>
-                    <!-- Card -->
-
                 </div>
 
             </div>
