--- a/public/cart.html
+++ b/public/cart.html
@@ -62,9 +62,10 @@
                             <div class="form-row">
                                 <div class="col-md-4">
                                     <div class="md-form md-outline">
+                                        <label for="validationCustom01">First name</label>
                                         <input type="text" class="form-control" id="validationCustom01"
                                             placeholder="First name" required>
-                                        <label for="validationCustom01">First name</label>
+
                                         <div class="valid-feedback">
                                             Looks good!
                                         </div>
@@ -72,20 +73,23 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="md-form md-outline">
+                                        <label for="validationCustom02">Last name</label>
                                         <input type="text" class="form-control" id="validationCustom02"
                                             placeholder="Last name" required>
-                                        <label for="validationCustom02">Last name</label>
+
                                         <div class="valid-feedback">
                                             Looks good!
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-4">
-                                    <div class="md-form md-outline input-group">
-                                        <input type="text" class="form-control" id="validationCustomUsername"
-                                            placeholder="Email" aria-describedby="inputGroupPrepend" required>
-                                        <div class="invalid-feedback">
-                                            Please enter a valid Email adress.
+                                    <div class="md-form md-outline">
+                                        <label for="validationCustom02">Email</label>
+                                        <input type="text" class="form-control" id="validationCustom02"
+                                            placeholder="Email" required>
+
+                                        <div class="valid-feedback">
+                                            Looks good!
                                         </div>
                                     </div>
                                 </div>
@@ -93,20 +97,21 @@
                             <div class="form-row">
                                 <div class="col-md-6">
                                     <div class="md-form md-outline">
+                                        <label for="validationCustom03">Street Nr.</label>
                                         <input type="text" class="form-control" id="validationCustom03"
                                             placeholder="Street Nr." required>
-                                        <label for="validationCustom03">Street Nr.</label>
                                         <div class="invalid-feedback">
                                             Please provide a valid city.
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="col-md-3">
+                                <div class="col-md-">
                                     <div class="md-form md-outline">
+                                        <label for="validationCustom03">City</label>
                                         <input type="text" class="form-control" id="validationCustom04"
                                             placeholder="City" required>
-                                        <label for="validationCustom03">City</label>
+
                                         <div class="invalid-feedback">
                                             Please provide a valid city.
                                         </div>
@@ -115,9 +120,10 @@
 
                                 <div class="col-md-3">
                                     <div class="md-form md-outline">
+                                        <label for="validationCustom05">Zip</label>
                                         <input type="text" class="form-control" id="validationCustom05"
                                             placeholder="Zip" required>
-                                        <label for="validationCustom05">Zip</label>
+
                                         <div class="invalid-feedback">
                                             Please provide a valid zip.
                                         </div>
