Change function for total cost without using the localstorage to avoid user changing manually

--- a/public/cart.html
+++ b/public/cart.html
@@ -55,8 +55,11 @@
                                 <a class="link" href="index.html">Home</a>
                             </div>
                         </div>
-
                     </div>
+                    <div class="cart-total">
+                        <p>Your total is: <span id="total">0.00</span> EUR</p>
+                    </div>
+
                     <div class="container" id="checkout-form">
                         <form class="needs-validation" novalidate>
                             <div class="form-row">
