--- a/public/product.html
+++ b/public/product.html
@@ -55,6 +55,9 @@
                                 <p class="desc" id="teddyDescription">
                                     <!--fill from product.js-->
                                 </p>
+                                <p class="price" id="teddyPrice">
+                                    <!--fill from product.js-->
+                                </p>
                             </figcaption>
                             <div class="bottom-wrap">
                                 <div class="row justify-content-center">
