--- a/public/cart.html
+++ b/public/cart.html
@@ -133,8 +133,10 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <button class="btn btn-primary btn-sm" type="submit">Checkout</button>
+                            <div class="btn-wrapper justify-content-right">
+                                <button class="btn btn-primary btn-sm " id="submit-button"
+                                    type="submit">Checkout</button>
+                            </div>
                         </form>
                     </div>
                 </div>
