--- a/public/product.html
+++ b/public/product.html
@@ -43,7 +43,7 @@
         <section>
             <form>
                 <div class="row justify-content-center">
-                    <div class="col-md-8 justify-content-center" id="myData">
+                    <div class="col-md-6 justify-content-center" id="myData">
                         <figure class="card card-product">
                             <div class="img-wrap" id="img-wrap">
                                 <!--fill from product.js-->
@@ -69,7 +69,7 @@
                                         </select>
                                     </div>
 
-                                    <div class="form-group">
+                                    <div class="d-flex flex-wrap">
                                         <label form="addToCartForm">Select quantity</label>
                                         <select class="form-control" id="myQuantity">
                                             <option value="1" selected="">1</option>
