--- a/public/cart.html
+++ b/public/cart.html
@@ -106,11 +106,12 @@
 
                             </div>
 
+                            <div class="btn-wrapper justify-content-right">
+                                <button class="btn btn-primary btn-sm " id="submit-button"
+                                    type="submit">Checkout</button>
+                            </div>
+                        </form>
                     </div>
-                    <div class="btn-wrapper justify-content-right">
-                        <button class="btn btn-primary btn-sm " id="submit-button" type="submit">Checkout</button>
-                    </div>
-                    </form>
                 </div>
             </div>
 
