--- a/public/cart.html
+++ b/public/cart.html
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="container container-fluid" id="checkout-form">
-                        <form class="col-md-6 col-sm-12 col-lg-6 needs-validation" action="" onsubmit="validate()">
+                        <div class="col-md-6 col-sm-12 col-lg-6 needs-validation">
 
                             <div class="row col-md-12">
                                 <div class="md-form md-outline">
@@ -91,13 +91,7 @@
                                         required>
                                 </div>
                             </div>
-                            <div class="row col-md-12">
-                                <div class="md-form md-outline">
-                                    <label for="post-code">Post Code</label>
-                                    <input type="text" class="form-control" id="post-code" placeholder="Post Code"
-                                        required>
-                                </div>
-                            </div>
+
                             <div class="row col-md-12">
                                 <div class="md-form md-outline">
                                     <label for="city">City</label>
@@ -110,7 +104,7 @@
                                 <button class="btn btn-primary btn-sm " id="submit-button"
                                     type="submit">Checkout</button>
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
