--- a/public/cart.html
+++ b/public/cart.html
@@ -51,8 +51,9 @@
 
                         <div class="col" id="productList">
                             <div class="error-message" id="empty-cart-message">
-                                <p class="empty-cart">Oups! It seems you cart is empty... Choose our products here: </p>
-                                <a class="link" href="index.html">Home</a>
+                                <p class="empty-cart">Oups! It seems you cart is empty... Choose our products here: <a
+                                        class="link" href="index.html">Home</a></p>
+
                             </div>
                         </div>
                     </div>
@@ -114,7 +115,7 @@
         </section>
     </main>
 
-    <footer class="page-footer font-small indigo">
+    <footer>
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
             <a href="nounours.com">Nounours.com</a>
         </div>
