--- a/public/order.html
+++ b/public/order.html
@@ -44,14 +44,26 @@
             <div class="container">
                 <div class="row" id="myData">
                     <div class="container-sm title">
-                        <h2>Your order nr. <span></span> is confirmed!</h2>
+                        <h2>Your order nr. <span id="orderNumber">12345</span> is confirmed!</h2>
                     </div>
+                    <div class="container-fluid" id="orderConfirmation">
+                        <h4>Please submit the total of <span id="orderTotal">123</span>.00 EUR by <span
+                                class="text-warning">express pigeon
+                                messenger</span> </h4>
+                    </div>
+                </div>
+
+                <div class="container">
+
+
+                    <p>Loved our products? buy more here: <a href="index.html">Home</a></p>
+
                 </div>
             </div>
         </section>
     </main>
 
-    <footer class="page-footer font-small indigo">
+    <footer class="footer">
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
             <a href="nounours.com">Nounours.com</a>
         </div>
