Create RegEx Rules that work

--- a/public/cart.html
+++ b/public/cart.html
@@ -39,7 +39,8 @@
 
     </header>
     <main>
-        <h1 class="hello">Hello World of teddies</h1>
+
+
         <section>
             <div class="container">
                 <div class="row" id="myData">
@@ -51,7 +52,7 @@
 
                         <div class="col" id="productList">
                             <div class="error-message" id="empty-cart-message">
-                                <p class="empty-cart">Oups! It seems you cart is empty... Choose our products here: <a
+                                <p class="empty-cart">Ooops! It seems you cart is empty... Choose our products here: <a
                                         class="link" href="index.html">Home</a></p>
 
                             </div>
