Create function to remove orderConfirmation from localstorage when clicking on Home button

--- a/public/order.html
+++ b/public/order.html
@@ -55,7 +55,7 @@
                 <div class="container">
 
 
-                    <p>Loved our products? buy more here: <a href="index.html">Home</a></p>
+                    <p>Loved our products? buy more here: <a id="home-link" href="index.html">Home</a></p>
 
                 </div>
             </div>
